<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment"
    android:orientation="vertical"
    android:background="@drawable/ic_decky_profile_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/x_small_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewWhatIsDecky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_what_is_decky"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:src="@drawable/ic_main_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_premium"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPrimaryMainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_default_name"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewPrimaryMainName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/small_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewSecondaryMainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_default_name"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotalBattle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_battle_count"
            android:textColor="@color/battle_total_count_text_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewBattleBig"
            app:layout_constraintStart_toStartOf="@+id/textViewBattleBig"
            app:layout_constraintTop_toBottomOf="@+id/textViewBattleBig" />

        <TextView
            android:id="@+id/textViewWinCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_win_text_count"
            android:textColor="@color/battle_win_text_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewSuccessBig"
            app:layout_constraintStart_toStartOf="@+id/textViewSuccessBig"
            app:layout_constraintTop_toBottomOf="@+id/textViewSuccessBig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_win_text"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewWinCount"
            app:layout_constraintStart_toStartOf="@+id/textViewWinCount"
            app:layout_constraintTop_toBottomOf="@+id/textViewWinCount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_text"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewTotalBattle"
            app:layout_constraintStart_toStartOf="@+id/textViewTotalBattle"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotalBattle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/textViewBattleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_battlebig"
            app:layout_constraintEnd_toStartOf="@id/textViewSuccessBig"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/textViewSuccessBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_successbig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewBattleBig"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fallow_us_text"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/main_text_color"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/x_small_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_linkedin"
            android:layout_marginRight="@dimen/small_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_instagram"
            android:layout_marginRight="@dimen/small_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebooklogin"
            android:layout_marginRight="@dimen/small_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_twitter"
            android:layout_marginRight="@dimen/small_margin"/>

    </LinearLayout>

</LinearLayout>